--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <div class="title">Calculadora IMC</div>
        <div class="input">
         <label>Nome</label>
-        <input type="text" id="nome">
+        <input type="text" id="name">
        </div>
        <div class="input">
         <label>Altura</label>
-        <input type="text" id="altura">
+        <input type="text" id="height">
        </div>
        <div class="input">
         <label>Peso</label>
-        <input type="text" id="peso">
+        <input type="text" id="weight">
        </div>
-       <button id="calcular" onclick="calcular()">Calcular</button>
+       <button onclick="calc()">Calcular</button>
 
-       <div id="resultado" class="resultado"></div>
+       <div id="result" class="result"></div>
 
     </div>
   </main>
